# src/models/vendor.ts
@@ -1,5 +1,12 @@
-import { Column, CreateDateColumn, Entity, OneToMany, PrimaryGeneratedColumn, UpdateDateColumn } from "typeorm";
-import { Product } from "./product";
+import {
+    Column,
+    CreateDateColumn,
+    Entity,
+    OneToMany,
+    PrimaryGeneratedColumn,
+    UpdateDateColumn,
+} from 'typeorm';
+import { Product } from './product';
 import { PurchaseHeader } from './purchase-header';
 
 @Entity()
@@ -7,7 +14,9 @@ export class Vendor {
     @PrimaryGeneratedColumn()
     id!: number;
 
-    @Column()
+    @Column({
+        unique: true,
+    })
     businessName!: string;
 
     @Column()
@@ -19,42 +28,53 @@ export class Vendor {
     address?: string;
 
     @Column({
-        nullable: true
+        nullable: true,
     })
     pancard?: string;
 
-    @Column()
+    @Column({
+        nullable: true,
+    })
     city?: string;
 
-    @Column()
+    @Column({
+        nullable: true,
+    })
     pincode?: string;
 
-    @Column()
+    @Column({
+        unique: true,
+    })
     gstNumber?: string;
 
-    @Column()
+    @Column({
+        nullable: true,
+    })
     dateOfEstablishment?: Date;
 
     @Column()
     contact!: string;
 
     // auditing
-	@CreateDateColumn()
-	created?: Date;
-	@UpdateDateColumn()
-	updated?: Date;
+    @CreateDateColumn()
+    created?: Date;
+    @UpdateDateColumn()
+    updated?: Date;
 
-	@Column({
-		nullable: true
-	})
-	createdBy?: string;
-	@Column({
-		nullable: true
-	})
-	updatedBy?: string;
+    @Column({
+        nullable: true,
+    })
+    createdBy?: string;
+    @Column({
+        nullable: true,
+    })
+    updatedBy?: string;
 
-    
-    @OneToMany(type => PurchaseHeader, vouchers => vouchers.vendor)
-    vouchers?: Array<Product>
+    @Column({
+        default: true,
+    })
+    active: boolean;
+
+    @OneToMany((type) => PurchaseHeader, (vouchers) => vouchers.vendor)
+    vouchers?: Array<Product>;
 }
-
